aws/main.tf
# provider "aws" {
#   region = var.region
# }

# data "aws_vpc" "default" {
#   default = true
# }

# resource "aws_security_group" "consul_nomad_ui_ingress" {
#   name   = "${var.name_prefix}-ui-ingress"
#   vpc_id = data.aws_vpc.default.id

#   # Nomad
#   ingress {
#     from_port       = 4646
#     to_port         = 4646
#     protocol        = "tcp"
#     cidr_blocks     = [var.allowlist_ip]
#   }

#   # Consul
#   ingress {
#     from_port       = 8500
#     to_port         = 8500
#     protocol        = "tcp"
#     cidr_blocks     = [var.allowlist_ip]
#   }

#   ingress {
#     from_port = 0
#     to_port   = 0
#     protocol  = "-1"
#     self      = true
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }

# resource "aws_security_group" "ssh_ingress" {
#   name   = "${var.name_prefix}-ssh-ingress"
#   vpc_id = data.aws_vpc.default.id

#   # SSH
#   ingress {
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = [var.allowlist_ip]
#   }

#   ingress {
#     from_port = 0
#     to_port   = 0
#     protocol  = "-1"
#     self      = true
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }

# resource "aws_security_group" "allow_all_internal" {
#   name   = "${var.name_prefix}-allow-all-internal"
#   vpc_id = data.aws_vpc.default.id

#   ingress {
#     from_port = 0
#     to_port   = 0
#     protocol  = "-1"
#     self      = true
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }

# resource "aws_security_group" "clients_ingress" {
#   name   = "${var.name_prefix}-clients-ingress"
#   vpc_id = data.aws_vpc.default.id

#   ingress {
#     from_port = 0
#     to_port   = 0
#     protocol  = "-1"
#     self      = true
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   # Add application ingress rules here
#   # These rules are applied only to the client nodes

#   # nginx example
#   # ingress {
#   #   from_port   = 80
#   #   to_port     = 80
#   #   protocol    = "tcp"
#   #   cidr_blocks = ["0.0.0.0/0"]
#   # }
# }

################################################################################
################################################################################

# resource "tls_private_key" "pk" {
#   algorithm = "RSA"
#   rsa_bits  = 4096
# }

# resource "aws_key_pair" "nomad" {
#   key_name   = "nomad-aws-key-pair"
#   public_key = tls_private_key.pk.public_key_openssh
# }

# resource "local_file" "nomad_key" {
#   content         = tls_private_key.pk.private_key_pem
#   filename        = "./nomad-aws-key-pair.pem"
#   file_permission = "0400"
# }


# resource "random_uuid" "nomad_id" {
# }

# resource "random_uuid" "nomad_token" {
# }



# resource "aws_instance" "server" {
#   ami                    = var.ami
#   instance_type          = var.server_instance_type
#   key_name               = aws_key_pair.nomad.key_name
#   vpc_security_group_ids = [aws_security_group.consul_nomad_ui_ingress.id, aws_security_group.ssh_ingress.id, aws_security_group.allow_all_internal.id]
#   count                  = var.server_count

#   # instance tags
#   # ConsulAutoJoin is necessary for nodes to automatically join the cluster
#   tags = merge(
#     {
#       "Name" = "${var.name_prefix}-server-${count.index}"
#     },
#     {
#       "ConsulAutoJoin" = "auto-join"
#     },
#     {
#       "NomadType" = "server"
#     }
#   )

#   root_block_device {
#     volume_type           = "gp2"
#     volume_size           = var.root_block_device_size
#     delete_on_termination = "true"
#   }

#   user_data = templatefile("${path.module}/../shared/data-scripts/user-data-server.sh", {
#     server_count              = var.server_count
#     region                    = var.region
#     cloud_env                 = "aws"
#     retry_join                = var.retry_join
#     nomad_binary              = var.nomad_binary
#     nomad_consul_token_id     = random_uuid.nomad_id.result
#     nomad_consul_token_secret = random_uuid.nomad_token.result
#   })
#   iam_instance_profile = aws_iam_instance_profile.instance_profile.name

#   metadata_options {
#     http_endpoint          = "enabled"
#     instance_metadata_tags = "enabled"
#   }
# }

# resource "aws_instance" "client" {
#   ami                    = var.ami
#   instance_type          = var.client_instance_type
#   key_name               = aws_key_pair.nomad.key_name
#   vpc_security_group_ids = [aws_security_group.consul_nomad_ui_ingress.id, aws_security_group.ssh_ingress.id, aws_security_group.clients_ingress.id, aws_security_group.allow_all_internal.id]
#   count                  = var.client_count
#   depends_on             = [aws_instance.server]

#   # instance tags
#   # ConsulAutoJoin is necessary for nodes to automatically join the cluster
#   tags = merge(
#     {
#       "Name" = "${var.name_prefix}-client-${count.index}"
#     },
#     {
#       "ConsulAutoJoin" = "auto-join"
#     },
#     {
#       "NomadType" = "client"
#     }
#   )

#   root_block_device {
#     volume_type           = "gp2"
#     volume_size           = var.root_block_device_size
#     delete_on_termination = "true"
#   }

#   ebs_block_device {
#     device_name           = "/dev/xvdd"
#     volume_type           = "gp2"
#     volume_size           = "50"
#     delete_on_termination = "true"
#   }

#   user_data = templatefile("${path.module}/../shared/data-scripts/user-data-client.sh", {
#     region                    = var.region
#     cloud_env                 = "aws"
#     retry_join                = var.retry_join
#     nomad_binary              = var.nomad_binary
#     nomad_consul_token_id     = random_uuid.nomad_id.result
#     nomad_consul_token_secret = random_uuid.nomad_token.result
#   })
#   iam_instance_profile = aws_iam_instance_profile.instance_profile.name

#   metadata_options {
#     http_endpoint          = "enabled"
#     instance_metadata_tags = "enabled"
#   }
# }

# resource "aws_iam_instance_profile" "instance_profile" {
#   name_prefix = var.name_prefix
#   role        = aws_iam_role.instance_role.name
# }

# resource "aws_iam_role" "instance_role" {
#   name_prefix        = var.name_prefix
#   assume_role_policy = data.aws_iam_policy_document.instance_role.json
# }

# data "aws_iam_policy_document" "instance_role" {
#   statement {
#     effect  = "Allow"
#     actions = ["sts:AssumeRole"]

#     principals {
#       type        = "Service"
#       identifiers = ["ec2.amazonaws.com"]
#     }
#   }
# }

# resource "aws_iam_role_policy" "auto_discover_cluster" {
#   name   = "${var.name_prefix}-auto-discover-cluster"
#   role   = aws_iam_role.instance_role.id
#   policy = data.aws_iam_policy_document.auto_discover_cluster.json
# }

# data "aws_iam_policy_document" "auto_discover_cluster" {
#   statement {
#     effect = "Allow"

#     actions = [
#       "ec2:DescribeInstances",
#       "ec2:DescribeTags",
#       "autoscaling:DescribeAutoScalingGroups",
#     ]

#     resources = ["*"]
#   }
# }
